--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,22 @@
-.mainContainer {
+.content {
     text-align: center;
-    padding: 10%; 
+    padding: 10%;
+   
+    color: white;
+}
+.mainContainer{
+    /*background-image: url('../images/bg2.png') ; 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: brown;
+    background-attachment: fixed;*/
+    opacity: 1;
+    width: 100%;
+    height: 1110px;
+    margin: 0;
+}
+.backgroundImage{
+    position: sticky;
+    top: 0px;
+    left: 0px;
 }
