--- a/src/styles/gameStyle.css
+++ b/src/styles/gameStyle.css
@@ -1,7 +1,6 @@
-
 .score {
     text-align: center;
-    color: #707070;
+    color: #ffffff;
     font-size: 177px;
     font-family: "Segoe UI";
     
@@ -19,7 +18,7 @@
 }
 
 .timer {
-    color: #707070;
+    color: #ffffff;
     font-size: 30px;
     font-family: "Segoe UI";
 
@@ -30,8 +29,7 @@
 }
 
 .nicks {
-    text-align: center;
-    color: #707070;
+    color: #ffffff;
     font-size: 30px;
     font-family: "Segoe UI";
 
@@ -43,4 +41,12 @@
     top: 122px;
     left: 50%;
     transform: translate(-50%, 0); 
+}
+
+.flex {
+    color: #ffffff;
+    font-size: 30px;
+    font-family: "Segoe UI";
+
+    display: flex;
 }
