--- a/src/styles/gameStyle.css
+++ b/src/styles/gameStyle.css
@@ -11,10 +11,10 @@
     display: flex;
 }
 
-.redScore{
+.red-score{
     color: #e23c16;
     text-shadow: 2px 1px 6px rgba(0, 0, 0, 1);}
-.blueScore{
+.blue-score{
     color: #296cd8;
     text-shadow: 2px 1px 6px rgba(0, 0, 0, 1);}
 .score p {
