[FOOS-102] Added better layout for lobby

--- a/src/styles/lobby.css
+++ b/src/styles/lobby.css
@@ -2,3 +2,11 @@
     display: flex;
     justify-content: space-around;
 }
+
+.bottom-buttons {
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
+    top: 400px;
+    width: 100%;
+}
