--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,6 @@
 }
 html *
 {
-   font-family: "Segoe UI" !important;
-   margin: 0;
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+    margin: 0;
 }
