--- a/src/styles/gameStyle.css
+++ b/src/styles/gameStyle.css
@@ -3,9 +3,8 @@
     color: #ffffff;
     font-size: 177px;
     font-family: "Segoe UI";
-    
     position: absolute;
-    top: 0px;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, 0); 
     display: flex;
